syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/duo/pb";

message LobbyStatus {
    repeated user.User users = 1;
    bool isStarting = 2;
}

message CreateLobbyRequest{
    string token = 1;
    int32 max_players = 2;
}

message CreateLobbyResponse{
    int32 session_id = 1;
}

message JoinLobbyRequest{
    string token = 1;
    int32 session_id = 2;
}

message DisconnectLobbyRequest{
    string token = 1;
    int32 session_id = 2;
}

message DisconnectLobbyResponse{
    bool success = 1;
}